Fix superposition of charts by editing css on firefox

--- a/src/css/charts.css
+++ b/src/css/charts.css
@@ -14,14 +14,15 @@
     left: 680px;
     top:40px;
 }
+
 #chart_2{
     position:fixed;
     left: 680px;
-    top:200px;
+    top:220px;
 }
 
 #chart_3{
     position:fixed;
     left: 680px;
-    top:370px;
+    top:390px;
 }
